add pseudoclasses and layouts

--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
         <hr>
         <section id="goals">
             <h2>Meeting Goals</h2>
-            <ul>
-                <li><p>Find out why<br> Sally <br>'s computer creates a new line every time she presses "y<br>"</p></li>
-                <li>Determine ways to use Tom's solution to world hunger to gain power</li>
-                <li>Work on <em>EMBRACING EXPRESSIVENESS</em> when it comes to branding</li>
-                <li>Finalize strategy for capturing Greenland</li>
-            </ul>
+            <div><p>Find out why<br> Sally <br>'s computer creates a new line every time she presses "y<br>"</p></div>
+            <div>Determine ways to use Tom's solution to world hunger to gain power</div>
+            <div>Work on <em>EMBRACING EXPRESSIVENESS</em> when it comes to branding</div>
+            <div>Finalize strategy for capturing Greenland</li>
         </section>
         <hr>
         <section id="announcements" class="announcements">
@@ -100,52 +98,62 @@
         <hr>
         <section id="discussion" class="discussion">
             <h2>Discussion</h2>
-            <ul>
-                <li><i>Barack Obama</i>: Good morning, everyone. Let's dive into our agenda. Sally, what's the deal with your computer?</li>
-                <li><i>Sally</i>: <i>Beep</i> Every time I press "y," my computer starts a new line. It's driving me crazy.</li>
-                <li><i>Donna Strickland</i>: That's peculiar. Have you tried restarting your system, Sally?</li>
-                <li><i>Sally</i>: <i>Beep</i> Beep beep Oh, I've tried everything! I even took it to the mechanic, but they couldn't figure it out either.</li>
-                <li><i>Tim Horton</i>: Sounds like a real head-scratcher. Have you noticed any other issues besides the "y" key?</li>
-                <li><i>Sally</i>: <i>Beep</i> Not really. Everything else seems to be working just fine. It's just this pesky "y" that's causing trouble.</li>
-                <li><i>Barack Obama</i>: Hmm, it could be a software glitch. Tim, could you take a closer look at it after the meeting?</li>
-                <li><i>Tim Horton</i>: Absolutely, Mr. President. I'll bring my toolkit and see what I can do.</li>
-                <li><i>Sally</i>: <i>Beep</i> Thank you, Tim. I really appreciate it.</li>
-                <li><i>Sachin Tendulkar</i>: You know, I once had a similar problem with my cricket bat. Every time I swung it, it made a strange noise.</li>
-                <li><i>Barack Obama</i>: Well, let's hope Tim can fix Sally's computer quicker than you fixed your bat, Sachin.</li>
-            </ul>
-            <ul>
-                <li><i>Barack Obama</i>: Now, onto Tom's brilliant idea to solve world hunger. Tom, care to explain?</li>
-                <li><i>Tom</i>: Meow, thank you, Mr. President. We'll use cheese to feed the world!</li>
-                <li><i>Hillary Clinton</i>: Cheese, Tom? Really?</li>
-                <li><i>Tom</i>: Hey, it's worth a shot!</li>
-                <li><i>Barack Obama</i>: Alright, let's entertain this for a moment. Tom, how do you propose we implement this cheesy solution on a global scale</li>
-                <li><i>Tom</i>: Well, we start by setting up cheese factories in every corner of the world. Then, we distribute the cheese to those in need, one slice at a time.</li>
-                <li><i>Ye Wenjie</i>: But what about the lactose intolerant?</li>
-                <li><i>Tom</i>: Uh, well, we could also offer dairy-free alternatives... like soy cheese?</li>
-                <li><i>Barack Obama</i>: Alright, let's get back on track. Tom, how do you envision using this solution to gain power?</li>
-                <li><i>Tom</i>: Meow, well, by controlling the world's cheese supply, we'll have leverage over every nation. They'll have to bow to our dairy dominance!</li>
-                <li><i>Ye Wenjie</i>: It sounds like a plan straight out of a cheesy movie.</li>
-                <li><i>Barack Obama</i>: Alright, let's explore more practical ways to address world hunger and gain influence on the global stage.</li>
-                <li><img src="images/RemyDream.png" alt="Lots of Cheese in a Pile"></li>
-            </ul>
-            <ul>
-                <li><i>Barack Obama</i>: Moving on to our next topic: embracing expressiveness in branding. How can we make our initiatives more engaging and relatable to the public?</li>
-                <li><i>Ariana Grande</i>: Well, I think we should bring more flair and excitement to our branding. Maybe add some sparkle, a little pizzazz</li>
-                <li><i>Barack Obama</i>: That's a great idea, Ariana. We want our initiatives to stand out and capture people's attention.</li>
-                <li><i>Ariana Grande</i>: Oh, you know me, Mr. President. I'm all about standing out and capturing attention.</li>
-                <li><i>Barack Obama</i>: Alright, let's brainstorm ways to infuse our branding with more personality and energy and have them ready by next meeting.</li>
-            </ul>
-            <ul>
-                <li><i>Barack Obama</i>: Alright, let's focus on our strategy for capturing Greenland. Any ideas?</li>
-                <li><i>Pradeep Kohsla</i>: Well, we could offer them economic incentives and infrastructure development projects to sway their allegiance. Or, we could just buy them out with our fat wallets, if you catch my drift.</li>
-                <li><i>Hillary Clinton</i>: Or we could take a more aggressive approach. We have the military might to simply seize control if negotiations fail.</li>
-                <li><i>Pradeep Kohsla</i>: Yeah, because who needs diplomacy when you've got tanks, am I right?</li>
-                <li><i>Barack Obama</i>: Let's keep our options open, Pradeep. We need to approach this situation with caution.</li>
-                <li><i>Ariana Grande</i>: How about we dazzle them with a star-studded concert? I could headline, of course, and we could throw in some other A-listers to sweeten the deal.</li>
-                <li><i>Ye Wenjie</i>: Or we could unleash a cyber attack, crippling their infrastructure and forcing them into submission.</li>
-                <li><i>Kabir Vats</i>: Let's go with that.</li>
-                <li><video controls><source src="images/video.mp4" type="video/mp4"></video></li>
-            </ul>
+            <div id="disc">
+                <div>
+                    <ul>
+                        <li><i>Barack Obama</i>: Good morning, everyone. Let's dive into our agenda. Sally, what's the deal with your computer?</li>
+                        <li><i>Sally</i>: <i>Beep</i> Every time I press "y," my computer starts a new line. It's driving me crazy.</li>
+                        <li><i>Donna Strickland</i>: That's peculiar. Have you tried restarting your system, Sally?</li>
+                        <li><i>Sally</i>: <i>Beep</i> Beep beep Oh, I've tried everything! I even took it to the mechanic, but they couldn't figure it out either.</li>
+                        <li><i>Tim Horton</i>: Sounds like a real head-scratcher. Have you noticed any other issues besides the "y" key?</li>
+                        <li><i>Sally</i>: <i>Beep</i> Not really. Everything else seems to be working just fine. It's just this pesky "y" that's causing trouble.</li>
+                        <li><i>Barack Obama</i>: Hmm, it could be a software glitch. Tim, could you take a closer look at it after the meeting?</li>
+                        <li><i>Tim Horton</i>: Absolutely, Mr. President. I'll bring my toolkit and see what I can do.</li>
+                        <li><i>Sally</i>: <i>Beep</i> Thank you, Tim. I really appreciate it.</li>
+                        <li><i>Sachin Tendulkar</i>: You know, I once had a similar problem with my cricket bat. Every time I swung it, it made a strange noise.</li>
+                        <li><i>Barack Obama</i>: Well, let's hope Tim can fix Sally's computer quicker than you fixed your bat, Sachin.</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><i>Barack Obama</i>: Now, onto Tom's brilliant idea to solve world hunger. Tom, care to explain?</li>
+                        <li><i>Tom</i>: Meow, thank you, Mr. President. We'll use cheese to feed the world!</li>
+                        <li><i>Hillary Clinton</i>: Cheese, Tom? Really?</li>
+                        <li><i>Tom</i>: Hey, it's worth a shot!</li>
+                        <li><i>Barack Obama</i>: Alright, let's entertain this for a moment. Tom, how do you propose we implement this cheesy solution on a global scale</li>
+                        <li><i>Tom</i>: Well, we start by setting up cheese factories in every corner of the world. Then, we distribute the cheese to those in need, one slice at a time.</li>
+                        <li><i>Ye Wenjie</i>: But what about the lactose intolerant?</li>
+                        <li><i>Tom</i>: Uh, well, we could also offer dairy-free alternatives... like soy cheese?</li>
+                        <li><i>Barack Obama</i>: Alright, let's get back on track. Tom, how do you envision using this solution to gain power?</li>
+                        <li><i>Tom</i>: Meow, well, by controlling the world's cheese supply, we'll have leverage over every nation. They'll have to bow to our dairy dominance!</li>
+                        <li><i>Ye Wenjie</i>: It sounds like a plan straight out of a cheesy movie.</li>
+                        <li><i>Barack Obama</i>: Alright, let's explore more practical ways to address world hunger and gain influence on the global stage.</li>
+                        <li><img src="images/RemyDream.png" alt="Lots of Cheese in a Pile"></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><i>Barack Obama</i>: Moving on to our next topic: embracing expressiveness in branding. How can we make our initiatives more engaging and relatable to the public?</li>
+                        <li><i>Ariana Grande</i>: Well, I think we should bring more flair and excitement to our branding. Maybe add some sparkle, a little pizzazz</li>
+                        <li><i>Barack Obama</i>: That's a great idea, Ariana. We want our initiatives to stand out and capture people's attention.</li>
+                        <li><i>Ariana Grande</i>: Oh, you know me, Mr. President. I'm all about standing out and capturing attention.</li>
+                        <li><i>Barack Obama</i>: Alright, let's brainstorm ways to infuse our branding with more personality and energy and have them ready by next meeting.</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><i>Barack Obama</i>: Alright, let's focus on our strategy for capturing Greenland. Any ideas?</li>
+                        <li><i>Pradeep Kohsla</i>: Well, we could offer them economic incentives and infrastructure development projects to sway their allegiance. Or, we could just buy them out with our fat wallets, if you catch my drift.</li>
+                        <li><i>Hillary Clinton</i>: Or we could take a more aggressive approach. We have the military might to simply seize control if negotiations fail.</li>
+                        <li><i>Pradeep Kohsla</i>: Yeah, because who needs diplomacy when you've got tanks, am I right?</li>
+                        <li><i>Barack Obama</i>: Let's keep our options open, Pradeep. We need to approach this situation with caution.</li>
+                        <li><i>Ariana Grande</i>: How about we dazzle them with a star-studded concert? I could headline, of course, and we could throw in some other A-listers to sweeten the deal.</li>
+                        <li><i>Ye Wenjie</i>: Or we could unleash a cyber attack, crippling their infrastructure and forcing them into submission.</li>
+                        <li><i>Kabir Vats</i>: Let's go with that.</li>
+                        <li><video controls><source src="images/video.mp4" type="video/mp4"></video></li>
+                    </ul>
+                </div>
+            </div>
         </section>
         <hr>
         <section id="action">
