--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta charset="utf-8"> 
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display|Audiowide">
+        <style>
+            h3 {font-family: "Audiowide", sans-serif;}
+            li {font-family: "Playfair Display", sans-serif;}
+        </style>
     </head>
     <header> 
         <nav>
